--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,8 +1,15 @@
-$blueColor: #2196F3;
+.toggle-button {
+  display: none;
+  position: absolute;
+  border: none;
+  text-transform: uppercase;
+  margin: 10px;
+  padding: 5px 10px;
+  background-color: #FFB958;
+  color: #FFFFFF;
+  border-radius: 5px;
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: $blueColor
+  @media (max-width: 900px) {
+    display: initial;
+  }
 }
